fixed displaying scrollbar on zoom

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ body {background: #101010; color: white; font-family: Gotham}
 
 .topDivider {position: absolute; width: 100%; height: 60%; z-index: 3; top: 0px}
 
-.topDivider .imagesElements {position: absolute; right: 10%; height: 100%; width: 100%; left: 0px}
+.topDivider .imagesElements {position: absolute; right: 10%; height: 100%; width: 100%; left: 0px; overflow: hidden}
 .topDivider .imagesElements img.main {height: 100%; left: 55%; position: relative;}
 .topDivider .imagesElements img.main.giftsAndOther {height: 100%; left: 51.5%; top: 5%; position: absolute}
 
@@ -34,7 +34,7 @@ body {background: #101010; color: white; font-family: Gotham}
 
 .elementThatUserSee .LearnMoreButton img { background: #131313; aspect-ratio: 1/1; padding: 12px; width: 50px; border: solid 1px #4d4d4d; border-radius: 200px; margin-right: 20px }
 
-.whatsTheCost {position: relative}
+.whatsTheCost {position: relative; overflow: hidden}
 .whatsTheCost img.bg {width: 100%; object-fit: cover; height: 140px}
 .whatsTheCost img.ball {position: absolute; left: 0px}
 .whatsTheCost img.cursor {left: 95%; bottom: -40px; position: absolute; z-index: 2}
